Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,39 @@
         </ul>
       </header>
       <section>
-        <p>the site</p>
+        <h1>
+<a name="raspberry-pi-internet-radio" class="anchor" href="#raspberry-pi-internet-radio"><span class="octicon octicon-link"></span></a>Raspberry Pi Internet Radio</h1>
+
+<h2>
+<a name="hardware" class="anchor" href="#hardware"><span class="octicon octicon-link"></span></a>Hardware</h2>
+
+<ul>
+<li>Raspberry Pi</li>
+<li>USB wifi dongle</li>
+<li>3x illuminated physical push button</li>
+<li>A cheap digital picture frame (DPF)</li>
+<li>USB powered hub (2.5A current)</li>
+</ul><h2>
+<a name="software" class="anchor" href="#software"><span class="octicon octicon-link"></span></a>Software</h2>
+
+<ul>
+<li>Raspian</li>
+<li>MPD</li>
+<li>MPC</li>
+<li>LCD4Linux</li>
+<li>Node.js</li>
+</ul><h2>
+<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
+
+<h3>
+<a name="flashing-the-dpf" class="anchor" href="#flashing-the-dpf"><span class="octicon octicon-link"></span></a>Flashing the DPF</h3>
+
+<p>To enable the DPF to work with lcd4linux a custom firmware is needed.</p>
+
+<h3>
+<a name="compiling-lcd4linux-with-dpf-and-python-plugin" class="anchor" href="#compiling-lcd4linux-with-dpf-and-python-plugin"><span class="octicon octicon-link"></span></a>Compiling lcd4linux with DPF and Python plugin</h3>
+
+<p>Lcd4linux is a tool to control lcd displays connected to the computer. Plugins provide additonal functionality, using a DPF and accessing Python modules in this case.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/bestimmaa">bestimmaa</a></p>
