--- a/index.html
+++ b/index.html
@@ -37,18 +37,22 @@
 <ul>
 <li>Raspberry Pi</li>
 <li>USB wifi dongle</li>
-<li>3x illuminated physical push button</li>
+<li>3x illuminated physical push buttons</li>
 <li>A cheap digital picture frame (DPF)</li>
 <li>USB powered hub (2.5A current)</li>
 </ul><h2>
 <a name="software" class="anchor" href="#software"><span class="octicon octicon-link"></span></a>Software</h2>
 
 <ul>
-<li>Raspian</li>
-<li>MPD</li>
-<li>MPC</li>
-<li>LCD4Linux</li>
-<li>Node.js</li>
+<li><a href="http://www.raspbian.org">Raspbian</a></li>
+<li>
+<a href="http://www.musicpd.org">MPD</a> - Music Player Daemon</li>
+<li>
+<a href="http://www.musicpd.org/clients/mpc/">MPC</a> - A client to control mpc</li>
+<li>
+<a href="http://ssl.bulix.org/projects/lcd4linux/">lcd4linux</a> - Display information on DPF</li>
+<li>
+<a href="http://nodejs.org">node.js</a> - Runs the API server</li>
 </ul><h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
@@ -61,6 +65,16 @@
 <a name="compiling-lcd4linux-with-dpf-and-python-plugin" class="anchor" href="#compiling-lcd4linux-with-dpf-and-python-plugin"><span class="octicon octicon-link"></span></a>Compiling lcd4linux with DPF and Python plugin</h3>
 
 <p>Lcd4linux is a tool to control lcd displays connected to the computer. Plugins provide additonal functionality, using a DPF and accessing Python modules in this case.</p>
+
+<h2>
+<a name="cheat-sheet" class="anchor" href="#cheat-sheet"><span class="octicon octicon-link"></span></a>Cheat Sheet</h2>
+
+<h3>
+<a name="mpd-playlist-directory" class="anchor" href="#mpd-playlist-directory"><span class="octicon octicon-link"></span></a>MPD playlist directory</h3>
+
+<p><strong>/var/lib/mpd/playlists</strong></p>
+
+<p>Use this directory to maintain a collection of playlists. You can use the common playlist formats like .pls and .m3u. I'm maintaining a single playlist for every station (STATIONNAME.pls) and a single playlist with all of my favorite station. This way mpc can jump to a specific station with a <em>mpc clear</em> and following <em>mpc load STATIONNAME.pls</em> command. The <a href="chrisfmserver.js">API server</a> makes use of this to change stations based on requests.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/bestimmaa">bestimmaa</a></p>
